--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     buildToolsVersion "26.0.1"
+    useLibrary  'org.apache.http.legacy'
     defaultConfig {
         applicationId "nutc.imac.edu.bishuntf"
         minSdkVersion 21
@@ -29,4 +30,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile "com.google.dagger:dagger:2.8"
     annotationProcessor "com.google.dagger:dagger-compiler:2.8"
+    compile 'org.apache.httpcomponents:httpmime:4.1.2'
+    compile 'org.apache.httpcomponents:httpclient:4.5'
+    compile 'com.android.volley:volley:1.0.0'
 }
